# lab3

./: CMakeLists.txt  adapter.h  main.cpp  test.cpp
